--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
